--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Background-color: #e5e1e6;
 </head>
 <body>
 <h2> Troy’s Professional Site</h2>
-<img src=”showpicture.bmp”>
+<img src=”troy.png”>
 <p style=”font-family:helvetica; font-size:16px”>
 My name is Troy Renaux and I am a Junior Communication major at Bob Jones University, and I am also working on a graphic design degree at BJU. Right now I am working at
 <a href=”signenterprise.com”>Sign Enterprise</a>
