--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Background-color: #e5e1e6;
 <h2> Troy’s Professional Site</h2>
 <p style=”font-family:helvetica; font-size:16px”>
 <img src=”TR.jpg”>
-My name is Troy Renaux and I am a Junior Communication major at Bob Jones University, and I am also working on a graphic design degree at BJU. Right now I am working at
+My name is Troy Renaux and I am a Junior Communication major at Bob Jones University. I am also working on a graphic design degree at BJU. Right now I am working at
 <a href=”signenterprise.com”>Sign Enterprise</a>
 designing signs and other graphics. At the same time I am taking this class and also doing a little bit of graphic design freelancing. 
 </p>
