--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Background-color: #e5e1e6;
 <p>
 <img src=”TR.jpg”width="100">
 My name is Troy Renaux and I am a Junior Communication major at Bob Jones University. I am also working on a graphic design degree at BJU. Right now I am working at
-<a href=”signenterprise.com”>Sign Enterprise</a>
+<a href=”https://signenterprise.com”>Sign Enterprise</a>
 designing signs and other graphics. At the same time I am taking this class and also doing a little bit of graphic design freelancing. 
 </p>
 <p>
