--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ Background-color: #e5e1e6;
 <body>
 <h2> Troy’s Professional Site</h2>
 <p>
-<img src=”TR.jpg” width="100">
+<img src="TR.jpg">
 My name is Troy Renaux and I am a Junior Communication major at Bob Jones University. I am also working on a graphic design degree at BJU. Right now I am working at
-<a href=”https://signenterprise.com/”>Sign Enterprise</a>
+<a href="https://signenterprise.com/">Sign Enterprise</a>
 designing signs and other graphics. At the same time I am taking this class and also doing a little bit of graphic design freelancing. 
 </p>
 <p>
 As far as hobbies go, I really enjoy playing board games. My favorite game is called 
-<a href=”https://boardgamegeek.com/boardgamegeek.com/boardgame/169786/scythe/”>Scythe</a>
+<a href="https://boardgamegeek.com/boardgamegeek.com/boardgame/169786/scythe/">Scythe</a>
 and is is basically a mixture between Settlers of Catan and Risk.
 </p>
 </body>
