--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ designing signs and other graphics. At the same time I am taking this class and 
 </p>
 <p>
 As far as hobbies go, I really enjoy playing board games. My favorite game is called 
-<a href="https://boardgamegeek.com/boardgamegeek.com/boardgame/169786/scythe/">Scythe</a>
+<a href="https://stonemaiergames.com/games/scythe/">Scythe</a>
 and is is basically a mixture between Settlers of Catan and Risk.
 </p>
 </body>
