--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ Background-color: #e5e1e6;
 <body>
 <h2> Troy’s Professional Site</h2>
 <p>
-<img src="TR.jpg">
+<img src="TR.jpg"width="200">
 My name is Troy Renaux and I am a Junior Communication major at Bob Jones University. I am also working on a graphic design degree at BJU. Right now I am working at
-<a href="https://signenterprise.com/">Sign Enterprise</a>
+<a href="https://www.facebook.com/SignEnterprise-Hampton-Roads-2184583108448591/">Sign Enterprise</a>
 designing signs and other graphics. At the same time I am taking this class and also doing a little bit of graphic design freelancing. 
 </p>
 <p>
