--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@ As far as hobbies go, I really enjoy playing board games. My favorite game is ca
 <a href="https://stonemaiergames.com/games/scythe/">Scythe</a>
 and is is basically a mixture between Settlers of Catan and Risk.
 </p>
+  <p>
+I hope you all enjoy this website. It took a lot longer to build than I had anticipated and does half the stuff I tried to do with it. I appreciate what this class is teaching me but I am definitely using Semplice when I build my portfolio website next year.
+  </p>
 </body>
 </html>
